rice mill crm/force-app/main/default/objects/consumer__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <formula>Rice_taken_by_shops__c*rice_mill_name__r.rice_price_kg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>