rice mill crm/force-app/main/default/objects/consumer__c/fields/Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Name__c</fullName>
    <formula>First_name__c+&apos; &apos;+Last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Name</label>
    <type>Text</type>
</CustomField>